--- a/src/Domain/Demo/Views/Layouts/PropellerDemoLayout.cshtml
+++ b/src/Domain/Demo/Views/Layouts/PropellerDemoLayout.cshtml
@@ -8,13 +8,13 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title></title>
+    <title>Propeller.Mvc.Demo - @ViewBag.Title</title>
+    <link href="~/styles/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-<div>
-    <h1>Propeller Demo Page</h1></div>
-<div>
+<div class="container">
     @Html.Sitecore().Placeholder("Content")
 </div>
+    <script src="~/scripts/bootstrap.min.js"></script>
 </body>
 </html>
