--- a/src/Domain/Demo/Views/Character/Index.cshtml
+++ b/src/Domain/Demo/Views/Character/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Propeller.Mvc.Demo.ViewModels
+@using Propeller.Mvc.Model.Adapters
 @using Propeller.Mvc.View
 @using Sitecore.Data.Fields
 @using Sitecore.Web.UI.WebControls
@@ -45,6 +46,18 @@
                         </a>
                     </p>
                 </div>
+
+                <label class="col-sm-2 control-label">Source</label>
+                <div class="col-sm-10">
+                    <p class="form-control-static">
+                        <a href="@(Model.GetAs<GeneralLink>(p => p.ExternalLink).Url)">
+                            @(Model.GetAs<GeneralLink>(p => p.ExternalLink).Desciption)
+                        </a>
+                    </p>
+                </div>
+
+
+
             </div>
         </form>
     </div>
