finised first pass on template rendering

--- a/src/Domain/Demo/Views/Character/Index.cshtml
+++ b/src/Domain/Demo/Views/Character/Index.cshtml
@@ -7,6 +7,10 @@
 @{
     ViewBag.Title = Model.DisplayName;
 }
+@*********************
+        Character View
+    **********************@
+
 <div class="row">
     <div class="col-xs-2">
         @Model.Render(p => p.Photo)
