--- a/src/Domain/Demo/Views/Vehicle/Index.cshtml
+++ b/src/Domain/Demo/Views/Vehicle/Index.cshtml
@@ -1,10 +1,21 @@
 ﻿@using Propeller.Mvc.Model.Adapters
+@using Propeller.Mvc.View
 @model Propeller.Mvc.Demo.ViewModels.VehicleViewModel
 
+@*********************
+        Vehicle  View
+    **********************@
+
+@helper VehicleTemplate(Image img)
+{
+    <div style="background-image:url('@img.Url)');width:165px; height: 198px; background-size: cover; background-repeat: no-repeat;background-position: center center">
+        <strong style="color: white;">@img.Alt</strong>
+    </div>
+}
 
 <div class="row">
     <div class="col-xs-2">
-        <img src="@(Model.GetAs<Image>(p => p.Photo).Url)" style="max-width: 100%;height: auto"/> 
+        @(Model.Template(vm => VehicleTemplate(vm.GetAs<Image>(p => p.Photo))))
     </div>
     <div class="col-xs-10">
         <form class="form-horizontal">
@@ -37,7 +48,7 @@
                 <div class="col-sm-10">
                     <p class="form-control-static">@Model.Render(p => p.Length)</p>
                 </div>
-              
+
 
                 <label class="col-sm-2 control-label">Shielding</label>
                 <div class="col-sm-10">
