--- a/src/Domain/Demo/Views/Vehicle/Index.cshtml
+++ b/src/Domain/Demo/Views/Vehicle/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Propeller.Mvc.Model.Adapters
+﻿@using Newtonsoft.Json
+@using Propeller.Mvc.Model.Adapters
 @using Propeller.Mvc.View
 @model Propeller.Mvc.Demo.ViewModels.VehicleViewModel
 
@@ -60,5 +61,15 @@
                 </div>
             </div>
         </form>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-xs-12">
+
+        <strong>Raw values</strong>
+        <pre>
+            @ViewBag.SerializedModel
+        </pre>
     </div>
 </div>
