--- a/src/Domain/Demo/Views/Character/Index.cshtml
+++ b/src/Domain/Demo/Views/Character/Index.cshtml
@@ -1,8 +1,6 @@
 ﻿@using Propeller.Mvc.Demo.ViewModels
 @using Propeller.Mvc.Model.Adapters
-@using Propeller.Mvc.View
-@using Sitecore.Data.Fields
-@using Sitecore.Web.UI.WebControls
+@using Propeller.Mvc.Presentation
 @model Propeller.Mvc.Demo.ViewModels.CharacterViewModel
 @{
     ViewBag.Title = Model.DisplayName;
