--- a/src/Domain/Demo/Views/Vehicle/Index.cshtml
+++ b/src/Domain/Demo/Views/Vehicle/Index.cshtml
@@ -1,6 +1,5 @@
-﻿@using Newtonsoft.Json
-@using Propeller.Mvc.Model.Adapters
-@using Propeller.Mvc.View
+﻿@using Propeller.Mvc.Model.Adapters
+@using Propeller.Mvc.Presentation
 @model Propeller.Mvc.Demo.ViewModels.VehicleViewModel
 
 @*********************
