--- a/src/Domain/Demo/Views/Character/Index.cshtml
+++ b/src/Domain/Demo/Views/Character/Index.cshtml
@@ -46,8 +46,8 @@
                 <label class="col-sm-2 control-label">Vehicle</label>
                 <div class="col-sm-10">
                     <p class="form-control-static">
-                        <a href="@(Model.GetItemReference<VehicleViewModel>(p => p.PrimaryTransporation).Url)">
-                            @(Model.GetItemReference<VehicleViewModel>(p => p.PrimaryTransporation).DisplayName)
+                        <a href="@(Model.GetItemReference<VehicleViewModel>(p => p.PrimaryTransportation).Url)">
+                            @(Model.GetItemReference<VehicleViewModel>(p => p.PrimaryTransportation).DisplayName)
                         </a>
                     </p>
                 </div>
@@ -62,6 +62,17 @@
                 </div>
             </div>
         </form>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="col-xs-12">
+
+        <strong>Raw values</strong>
+        <pre>
+            @ViewBag.SerializedModel
+        </pre>
     </div>
 </div>
 
