--- a/src/Domain/Demo/Views/Vehicle/Index.cshtml
+++ b/src/Domain/Demo/Views/Vehicle/Index.cshtml
@@ -48,6 +48,10 @@
                 <div class="col-sm-10">
                     <p class="form-control-static">@Model.Render(p => p.Length)</p>
                 </div>
+                <label class="col-sm-2 control-label">Entered Service</label>
+                <div class="col-sm-10">
+                    <p class="form-control-static">@Model.EnteredService</p>
+                </div>
 
 
                 <label class="col-sm-2 control-label">Shielding</label>
