--- a/src/Domain/Demo/Views/Character/Index.cshtml
+++ b/src/Domain/Demo/Views/Character/Index.cshtml
@@ -9,9 +9,23 @@
         Character View
     **********************@
 
+@helper VehicleTemplate(GeneralLink link)
+{
+    <a href="@link.Url">
+        @link.Desciption
+        <img src="~/images/empire_icon.jpg" style="height: 15px; width: 15px"/>
+    </a>
+}
+
+
+@helper ImageTemplate(Image img)
+{
+    <div style="background-image: url('@img.Url'); width: @(img.Witdh)px; height: @(img.Height)px"></div>
+}
+
 <div class="row">
     <div class="col-xs-2">
-        @Model.Render(p => p.Photo)
+        @Model.Template(p => ImageTemplate(p.GetAs<Image>(c => c.Photo)))
     </div>
     <div class="col-xs-10">
         <form class="form-horizontal">
@@ -46,9 +60,7 @@
                 <label class="col-sm-2 control-label">Vehicle</label>
                 <div class="col-sm-10">
                     <p class="form-control-static">
-                        <a href="@(Model.GetItemReference<VehicleViewModel>(p => p.PrimaryTransportation).Url)">
-                            @(Model.GetItemReference<VehicleViewModel>(p => p.PrimaryTransportation).DisplayName)
-                        </a>
+                        @Model.Template(p => VehicleTemplate(p.GetAs<GeneralLink>(c => c.PrimaryTransportation)))
                     </p>
                 </div>
 
