--- a/src/Domain/Demo/Views/Character/Index.cshtml
+++ b/src/Domain/Demo/Views/Character/Index.cshtml
@@ -45,10 +45,9 @@
                 </div>
                 <label class="col-sm-2 control-label">Vehicle</label>
                 <div class="col-sm-10">
-                    @(Model.GetItemReference<VehicleViewModel>(p => p.PrimaryTransportation).DisplayName)
                     <p class="form-control-static">
-                        <a href="@(Model.GetItemReference<VehicleViewModel>(p => p.PrimaryTransportation).Url)">
-                            @(Model.GetItemReference<VehicleViewModel>(p => p.PrimaryTransportation).DisplayName)
+                        <a href="@(Model.GetAs<GeneralLink>(p => p.PrimaryTransportation).Url)">
+                            @(Model.GetAs<GeneralLink>(p => p.PrimaryTransportation).Desciption)
                         </a>
                     </p>
                 </div>
