refactored item extraction

--- a/src/Domain/Demo/Views/Character/Index.cshtml
+++ b/src/Domain/Demo/Views/Character/Index.cshtml
@@ -80,6 +80,6 @@
 {
     foreach (var org in orgs)
     {
-        <div><a href="@org.Url"> @org.DisplayName</a> (@org.Render(p => p.OrganizationType))</div>
+        <div><a href="@org.Url"> @org.DisplayName</a> (@org.OrganizationType)</div>
     }
 }
