--- a/src/Domain/Demo/Views/Character/Index.cshtml
+++ b/src/Domain/Demo/Views/Character/Index.cshtml
@@ -39,7 +39,7 @@
                 <div class="col-sm-10">
                     <p class="form-control-static">
                         <a href="@(Model.GetItemReference<PlanetViewModel>(p => p.Homeworld).Url)">
-                            @(Model.GetItemReference<PlanetViewModel>(p => p.Homeworld).DisplayName)
+                            @(Model.GetItemReference<PlanetViewModel>(p => p.Homeworld).DisplayName) (Moons: @(Model.GetItemReference<PlanetViewModel>(p => p.Homeworld).Moons))
                         </a>
                     </p>
                 </div>
