ModelFactory always include other viewmodels

--- a/src/Domain/Demo/Views/Character/Index.cshtml
+++ b/src/Domain/Demo/Views/Character/Index.cshtml
@@ -37,8 +37,8 @@
                 <label class="col-sm-2 control-label">Homeworld</label>
                 <div class="col-sm-10">
                     <p class="form-control-static">
-                        <a href="@(Model.GetItemReference<PlanetViewModel>(p => p.Homeworld).Url)">
-                            @(Model.Homeworld.DisplayName) Moons: @(Model.GetItemReference<PlanetViewModel>(p => p.Homeworld).Render(p => p.Moons))
+                        <a href="@Model.Homeworld.Url">
+                            @Model.Homeworld.DisplayName Moons: @Model.Homeworld.Render(p => p.Moons)
                         </a>
                     </p>
                 </div>
@@ -61,7 +61,7 @@
                 </div>
                 <h1>Test</h1>
                 <ul>
-                    @foreach(var org in Model.GetList<OrganizationViewModel>(p => p.Affiliation))
+                    @foreach(var org in Model.Affiliation)
                     {
                         <li>@org.Render(p => p.Intro)</li>
                     }
