--- a/src/Domain/Demo/Views/Planet/Index.cshtml
+++ b/src/Domain/Demo/Views/Planet/Index.cshtml
@@ -2,8 +2,8 @@
 
 <div class="row">
     <div class="col-xs-4">
-        <img src="@(Model.GetAs<Propeller.Mvc.Model.Adapters.Image>(p => p.Photo).Url)"
-             alt="@(Model.GetAs<Propeller.Mvc.Model.Adapters.Image>(p => p.Photo).Alt)" 
+        <img src="@(Model.Photo.Url)"
+             alt="@(Model.Photo.Alt)" 
              style="max-width: 100%;height: auto"/>
     </div>
     <div class="col-xs-8">
