map inheritance checkpoint before fixing test project

--- a/src/Domain/Demo/Views/Character/Index.cshtml
+++ b/src/Domain/Demo/Views/Character/Index.cshtml
@@ -46,18 +46,27 @@
                 <label class="col-sm-2 control-label">Armor</label>
                 <div class="col-sm-10">
                     <p class="form-control-static">
-                        
-                            Type: @Model.Armor.BodyPart Armor value: @Model.Armor.ProtectionValue
-                        
+
+                        Type: @Model.Armor.BodyPart Armor value: @Model.Armor.ProtectionValue
+
                     </p>
                 </div>
 
                 <label class="col-sm-2 control-label">Weapon</label>
                 <div class="col-sm-10">
                     <p class="form-control-static">
-                        
-                            Type: @Model.Weapon.WeaponType Damage value: @Model.Weapon.DamageValue
-                        
+
+                        Type: @Model.Weapon.WeaponType Damage value: @Model.Weapon.DamageValue
+
+                    </p>
+                </div>
+
+                <label class="col-sm-2 control-label">Combat ID</label>
+                <div class="col-sm-10">
+                    <p class="form-control-static">
+
+                        Category: @Model.Weapon.Category
+
                     </p>
                 </div>
 
