--- a/src/Domain/Demo/Views/Vehicle/Index.cshtml
+++ b/src/Domain/Demo/Views/Vehicle/Index.cshtml
@@ -15,7 +15,7 @@
 
 <div class="row">
     <div class="col-xs-2">
-        @(Model.Template(vm => VehicleTemplate(vm.GetAs<Image>(p => p.Photo))))
+        @*@(Model.Template(vm => VehicleTemplate(vm.GetAs<Image>(p => p.Photo))))*@
     </div>
     <div class="col-xs-10">
         <form class="form-horizontal">
